--- a/homework16/css/style.css
+++ b/homework16/css/style.css
@@ -487,6 +487,7 @@
 
 .discount__button {
 	border: 2px solid #0156FF;
+	background: none;
 	box-sizing: border-box;
 	border-radius: 50px;
 	font-weight: 600;
